src/examples/errors/11_bool_arithmetic.veri
// Error: Arithmetic on boolean values
// Expected error: E001 - Type mismatch

fn main() {
    let a: bool = true;
    let b: bool = false;
    let c: int = a + b;
}
